--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -23,10 +23,19 @@ Executable timesheet
     snap-server               >= 0.9   && < 0.11,
     aeson                     >= 0.6   && < 0.7,
     rex                       >= 0.3   && < 0.4,
-    codec-mbox                >= 0.1   && < 0.2
+    codec-mbox                >= 0.1   && < 0.2,
+    text                      >= 0.11  && < 0.12,
+    time                      >= 1.4   && < 1.5,
+    parsec                    >= 3.1   && < 3.2,
+    http-conduit              >= 1.8   && < 1.9,
+    network                   >= 2.3   && < 2.4,
+    containers                >= 0.5   && < 0.6,
+    MissingH                  >= 1.2   && < 1.3,
+    process                   >= 1.1   && < 1.2,
+    transformers              >= 0.3   && < 0.4
 
   if impl(ghc >= 6.12.0)
-    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
+    ghc-options: -threaded -Wall -funbox-strict-fields -O2
                  -fno-warn-unused-do-bind
   else
-    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
+    ghc-options: -threaded -Wall -funbox-strict-fields -O2
