--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -32,7 +32,8 @@ Executable timesheet
     containers                >= 0.5   && < 0.6,
     MissingH                  >= 1.2   && < 1.3,
     process                   >= 1.1   && < 1.2,
-    transformers              >= 0.3   && < 0.4
+    transformers              >= 0.3   && < 0.4,
+    directory                 >= 1.2   && < 1.3
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
