--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -33,7 +33,8 @@ Executable timesheet
     MissingH                  >= 1.2   && < 1.3,
     process                   >= 1.1   && < 1.2,
     transformers              >= 0.3   && < 0.4,
-    directory                 >= 1.2   && < 1.3
+    directory                 >= 1.2   && < 1.3,
+    async                     >= 2.0   && < 2.1
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
