--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -29,12 +29,14 @@ Executable timesheet
     parsec                    >= 3.1   && < 3.2,
     http-conduit              >= 1.8   && < 1.9,
     network                   >= 2.3   && < 2.4,
-    containers                >= 0.5   && < 0.6,
+    containers                >= 0.4   && < 0.6,
     MissingH                  >= 1.2   && < 1.3,
     process                   >= 1.1   && < 1.2,
     transformers              >= 0.3   && < 0.4,
-    directory                 >= 1.2   && < 1.3,
-    async                     >= 2.0   && < 2.1
+    directory                 >= 1.1   && < 1.3,
+    async                     >= 2.0   && < 2.1,
+    ghc-prim                  >= 0.2   && < 0.3,
+    attoparsec                >= 0.10  && < 0.11
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
