--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -36,7 +36,8 @@ Executable timesheet
     directory                 >= 1.1   && < 1.3,
     async                     >= 2.0   && < 2.1,
     ghc-prim                  >= 0.2   && < 0.3,
-    attoparsec                >= 0.10  && < 0.11
+    attoparsec                >= 0.10  && < 0.11,
+    old-locale                >= 1.0   && < 1.1
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
