--- a/src/config.json
+++ b/src/config.json
@@ -7,6 +7,9 @@
 	"hg": [
 		{ "hgProj": "BUS", "hgUser": "Emmanuel Touzery", "hgRepo": "/home/emmanuel/projects/bus/smrt/ecodriving"}
 	],
+	"git": [
+		{ "gitProj": "BUS", "gitUser": "Emmanuel Touzery", "gitRepo": "/home/emmanuel/projects/bus/datalogger-git/edrd-datalogger"}
+	],
 	"email": {
 		"emailPaths": [
 			"/home/emmanuel/.thunderbird/92ynhr2s.default/Mail/mail.regulussoft.com/Sent",
