--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -39,7 +39,9 @@ Executable timesheet
     attoparsec                >= 0.10  && < 0.11,
     old-locale                >= 1.0   && < 1.1,
     text-icu                  >= 0.6   && < 0.7,
-    base64-bytestring         >= 1.0   && < 1.1
+    base64-bytestring         >= 1.0   && < 1.1,
+    HDBC                      >= 2.3   && < 2.4,
+    HDBC-sqlite3              >= 2.1   && < 2.2
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
