--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -41,7 +41,9 @@ Executable timesheet
     text-icu                  >= 0.6   && < 0.7,
     base64-bytestring         >= 1.0   && < 1.1,
     HDBC                      >= 2.3   && < 2.4,
-    HDBC-sqlite3              >= 2.1   && < 2.2
+    HDBC-sqlite3              >= 2.1   && < 2.2,
+    unordered-containers      >= 0.2   && < 0.3,
+    vector                    >= 0.10  && < 0.11
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
