--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -27,15 +27,13 @@ Executable timesheet
     text                      >= 0.11  && < 0.12,
     time                      >= 1.4   && < 1.5,
     parsec                    >= 3.1   && < 3.2,
-    http-conduit              >= 1.8   && < 1.9,
-    network                   >= 2.3   && < 2.4,
     containers                >= 0.4   && < 0.6,
     MissingH                  >= 1.2   && < 1.3,
     process                   >= 1.1   && < 1.2,
     transformers              >= 0.3   && < 0.4,
     directory                 >= 1.1   && < 1.3,
     async                     >= 2.0   && < 2.1,
-    ghc-prim                  >= 0.2   && < 0.3,
+    ghc-prim                  >= 0.2   && < 0.4,
     attoparsec                >= 0.10  && < 0.11,
     old-locale                >= 1.0   && < 1.1,
     text-icu                  >= 0.6   && < 0.7,
@@ -43,7 +41,12 @@ Executable timesheet
     HDBC                      >= 2.3   && < 2.4,
     HDBC-sqlite3              >= 2.1   && < 2.2,
     unordered-containers      >= 0.2   && < 0.3,
-    vector                    >= 0.10  && < 0.11
+    vector                    >= 0.10  && < 0.11,
+    network                   >= 2.4   && < 2.5,
+    http-streams              >= 0.4   && < 0.5,
+    dom-selector              >= 0.1   && < 0.2,
+    blaze-builder             >= 0.3.1 && < 0.4,
+    io-streams                >= 1.0.1 && < 1.1
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
