--- a/src/config.json
+++ b/src/config.json
@@ -27,8 +27,8 @@
 	"http://www.google.com/calendar/ical/etouzery%40gmail.com/private-d63868fef84ee0826c4ad9bf803048cc/basic.ics"
 	}},
 	{"Skype": { "skypeUsername" : "emmanuel.touzery" }},
-	{"Redmine": {"xredmineUrl": "http://redmine",
-"xredmineUsername": "emmanuel.touzery@lecip-its.com",
-		"xredmineUserDisplay": "Emmanuel Touzery",
-"xredminePassword": "itak2030"}}
+	{"Redmine": {"redmineUrl": "http://redmine/",
+"redmineUsername": "emmanuel.touzery@lecip-its.com",
+		"redmineUserDisplay": "Emmanuel Touzery",
+"redminePassword": "itak2030"}}
 ]
