--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -8,19 +8,16 @@ Maintainer:          etouzery@gmail.com
 Stability:           Experimental
 Category:            Web
 Build-type:          Simple
-Cabal-version:       >=1.2
+Cabal-version:       >=1.8
 
-Executable timesheet
-  hs-source-dirs: src
-  main-is: Main.hs
 
-  Build-depends:
+Library
+  hs-source-dirs: src/EventProviders
+  Build-Depends:
     base                      >= 4     && < 5,
     bytestring                >= 0.9.1 && < 0.11,
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl                       >= 2     && < 3,
-    snap-core                 >= 0.9   && < 0.11,
-    snap-server               >= 0.9   && < 0.11,
     aeson                     >= 0.6   && < 0.7,
     rex                       >= 0.3   && < 0.4,
     codec-mbox                >= 0.1   && < 0.2,
@@ -30,9 +27,84 @@ Executable timesheet
     containers                >= 0.4   && < 0.6,
     MissingH                  >= 1.2   && < 1.3,
     process                   >= 1.1   && < 1.2,
-    transformers              >= 0.3   && < 0.4,
+    --transformers              >= 0.3   && < 0.4,
     directory                 >= 1.1   && < 1.3,
     async                     >= 2.0   && < 2.1,
+    ghc-prim                  >= 0.2   && < 0.4,
+    attoparsec                >= 0.10  && < 0.11,
+    old-locale                >= 1.0   && < 1.1,
+    text-icu                  >= 0.6   && < 0.7,
+    base64-bytestring         >= 1.0   && < 1.1,
+    HDBC                      >= 2.3   && < 2.4,
+    HDBC-sqlite3              >= 2.1   && < 2.2,
+    network                   >= 2.4   && < 2.5,
+    http-streams              >= 0.4   && < 0.5,
+    dom-selector              >= 0.1   && < 0.2,
+    blaze-builder             >= 0.3.1 && < 0.4,
+    io-streams                >= 1.0.1 && < 1.1,
+    html-conduit              >= 1.1   && < 1.2,
+    xml-conduit               >= 1.1.0.3 && < 1.2,
+    HsOpenSSL                 >= 0.10.3.3 && < 0.11
+  exposed-modules:
+    EventProviders,
+    Event,
+    EventProvider,
+    Util
+  other-modules:
+    Redmine,
+    Git,
+    Svn,
+    Hg,
+    Email,
+    Skype,
+    Ical
+
+Executable timesheet
+  hs-source-dirs: src/App
+  main-is: Main.hs
+  Build-depends:
+     base,
+     timesheet,
+     text,
+     bytestring,
+     vector,
+     unordered-containers,
+     aeson,
+     async,
+     time,
+     transformers,
+     snap-core,
+     snap-server
+
+  if impl(ghc >= 6.12.0)
+    ghc-options: -threaded -Wall -funbox-strict-fields -O2
+                 -fno-warn-unused-do-bind
+  else
+    ghc-options: -threaded -Wall -funbox-strict-fields -O2
+
+test-suite        tests
+   type:            exitcode-stdio-1.0
+
+  hs-source-dirs: src/EventProviders, tests
+  main-is: Tests.hs
+
+  Build-depends:
+    base                      >= 4     && < 5,
+    bytestring                >= 0.9.1 && < 0.11,
+    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
+    mtl                       >= 2     && < 3,
+    aeson                     >= 0.6   && < 0.7,
+    rex                       >= 0.3   && < 0.4,
+    codec-mbox                >= 0.1   && < 0.2,
+    text                      >= 0.11  && < 0.12,
+    time                      >= 1.4   && < 1.5,
+    parsec                    >= 3.1   && < 3.2,
+    containers                >= 0.4   && < 0.6,
+    MissingH                  >= 1.2   && < 1.3,
+    process                   >= 1.1   && < 1.2,
+    --transformers              >= 0.3   && < 0.4,
+    directory                 >= 1.1   && < 1.3,
+    --async                     >= 2.0   && < 2.1,
     ghc-prim                  >= 0.2   && < 0.4,
     attoparsec                >= 0.10  && < 0.11,
     old-locale                >= 1.0   && < 1.1,
@@ -48,10 +120,6 @@ Executable timesheet
     blaze-builder             >= 0.3.1 && < 0.4,
     io-streams                >= 1.0.1 && < 1.1,
     html-conduit              >= 1.1   && < 1.2,
-    xml-conduit               >= 1.1.0.3 && < 1.2
-
-  if impl(ghc >= 6.12.0)
-    ghc-options: -threaded -Wall -funbox-strict-fields -O2
-                 -fno-warn-unused-do-bind
-  else
-    ghc-options: -threaded -Wall -funbox-strict-fields -O2
+    xml-conduit               >= 1.1.0.3 && < 1.2,
+    HsOpenSSL                 >= 0.10.3.3 && < 0.11,
+    hspec
