--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -122,4 +122,5 @@ test-suite        tests
     html-conduit              >= 1.1   && < 1.2,
     xml-conduit               >= 1.1.0.3 && < 1.2,
     HsOpenSSL                 >= 0.10.3.3 && < 0.11,
-    hspec
+    hspec,
+    HUnit
