--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -123,4 +123,5 @@ test-suite        tests
     xml-conduit               >= 1.1.0.3 && < 1.2,
     HsOpenSSL                 >= 0.10.3.3 && < 0.11,
     hspec,
-    HUnit
+    HUnit,
+    template-haskell
