--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -44,7 +44,8 @@ Library
     io-streams                >= 1.0.1 && < 1.1,
     html-conduit              >= 1.1   && < 1.2,
     xml-conduit               >= 1.1.0.3 && < 1.2,
-    HsOpenSSL                 >= 0.10.3.3 && < 0.11
+    HsOpenSSL                 >= 0.10.3.3 && < 0.11,
+    transformers
   exposed-modules:
     EventProviders,
     Event,
@@ -124,4 +125,5 @@ test-suite        tests
     HsOpenSSL                 >= 0.10.3.3 && < 0.11,
     hspec,
     HUnit,
-    template-haskell
+    template-haskell,
+    transformers
