fix git parsing bug --added tests to that effect

--- a/src/config.json
+++ b/src/config.json
@@ -9,6 +9,10 @@
 	{"Git": { "gitProj": "BUS", "gitUser": "Emmanuel Touzery",
 		  "gitRepo": "/home/emmanuel/projects/bus/tms"}},
 	{"Git": { "gitProj": "BUS", "gitUser": "Emmanuel Touzery",
+		  "gitRepo": "/home/emmanuel/projects/bus/lpp"}},
+	{"Git": { "gitProj": "BUS", "gitUser": "Emmanuel Touzery",
+		  "gitRepo": "/home/emmanuel/projects/bus/tms-mobile"}},
+	{"Git": { "gitProj": "BUS", "gitUser": "Emmanuel Touzery",
 		  "gitRepo": "/home/emmanuel/projects/bus/lppimport"}},
 	{"Git": { "gitProj": "BUS", "gitUser": "Emmanuel Touzery",
 		  "gitRepo": "/home/emmanuel/projects/bus/backendpoc"}},
