--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -38,7 +38,7 @@ Library
     HDBC                      >= 2.3   && < 2.4,
     HDBC-sqlite3              >= 2.1   && < 2.2,
     network                   >= 2.4   && < 2.5,
-    http-streams              >= 0.4   && < 0.5,
+    http-streams              >= 0.4,
     dom-selector              >= 0.1   && < 0.2,
     blaze-builder             >= 0.3.1 && < 0.4,
     io-streams                >= 1.0.1 && < 1.1,
@@ -117,7 +117,7 @@ test-suite        tests
     unordered-containers      >= 0.2   && < 0.3,
     vector                    >= 0.10  && < 0.11,
     network                   >= 2.4   && < 2.5,
-    http-streams              >= 0.4   && < 0.5,
+    http-streams              >= 0.4,
     dom-selector              >= 0.1   && < 0.2,
     blaze-builder             >= 0.3.1 && < 0.4,
     io-streams                >= 1.0.1 && < 1.1,
