--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -14,37 +14,36 @@ Cabal-version:       >=1.8
 Library
   hs-source-dirs: src/EventProviders
   Build-Depends:
-    base                      >= 4     && < 5,
-    bytestring                >= 0.9.1 && < 0.11,
-    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
-    mtl                       >= 2     && < 3,
-    aeson                     >= 0.6   && < 0.7,
-    rex                       >= 0.3   && < 0.4,
-    codec-mbox                >= 0.1   && < 0.2,
-    text                      >= 0.11  && < 0.12,
-    time                      >= 1.4   && < 1.5,
-    parsec                    >= 3.1   && < 3.2,
-    containers                >= 0.4   && < 0.6,
-    MissingH                  >= 1.2   && < 1.3,
-    process                   >= 1.1   && < 1.2,
-    --transformers              >= 0.3   && < 0.4,
-    directory                 >= 1.1   && < 1.3,
-    async                     >= 2.0   && < 2.1,
-    ghc-prim                  >= 0.2   && < 0.4,
-    attoparsec                >= 0.10  && < 0.11,
-    old-locale                >= 1.0   && < 1.1,
-    text-icu                  >= 0.6   && < 0.7,
-    base64-bytestring         >= 1.0   && < 1.1,
-    HDBC                      >= 2.3   && < 2.4,
-    HDBC-sqlite3              >= 2.1   && < 2.2,
-    network                   >= 2.4   && < 2.5,
-    http-streams              >= 0.4,
-    dom-selector              >= 0.1   && < 0.2,
-    blaze-builder             >= 0.3.1 && < 0.4,
-    io-streams                >= 1.0.1 && < 1.1,
-    html-conduit              >= 1.1   && < 1.2,
-    xml-conduit               >= 1.1.0.3 && < 1.2,
-    HsOpenSSL                 >= 0.10.3.3 && < 0.11,
+    base,
+    bytestring,
+    MonadCatchIO-transformers,
+    mtl,
+    aeson,
+    rex,
+    codec-mbox,
+    text,
+    time,
+    parsec,
+    containers,
+    MissingH,
+    process,
+    directory,
+    async,
+    ghc-prim,
+    attoparsec,
+    old-locale,
+    text-icu,
+    base64-bytestring,
+    HDBC,
+    HDBC-sqlite3,
+    network,
+    http-streams,
+    dom-selector,
+    blaze-builder,
+    io-streams,
+    html-conduit,
+    xml-conduit,
+    HsOpenSSL,
     transformers
   exposed-modules:
     EventProviders,
@@ -91,39 +90,37 @@ test-suite        tests
   main-is: Tests.hs
 
   Build-depends:
-    base                      >= 4     && < 5,
-    bytestring                >= 0.9.1 && < 0.11,
-    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
-    mtl                       >= 2     && < 3,
-    aeson                     >= 0.6   && < 0.7,
-    rex                       >= 0.3   && < 0.4,
-    codec-mbox                >= 0.1   && < 0.2,
-    text                      >= 0.11  && < 0.12,
-    time                      >= 1.4   && < 1.5,
-    parsec                    >= 3.1   && < 3.2,
-    containers                >= 0.4   && < 0.6,
-    MissingH                  >= 1.2   && < 1.3,
-    process                   >= 1.1   && < 1.2,
-    --transformers              >= 0.3   && < 0.4,
-    directory                 >= 1.1   && < 1.3,
-    --async                     >= 2.0   && < 2.1,
-    ghc-prim                  >= 0.2   && < 0.4,
-    attoparsec                >= 0.10  && < 0.11,
-    old-locale                >= 1.0   && < 1.1,
-    text-icu                  >= 0.6   && < 0.7,
-    base64-bytestring         >= 1.0   && < 1.1,
-    HDBC                      >= 2.3   && < 2.4,
-    HDBC-sqlite3              >= 2.1   && < 2.2,
-    unordered-containers      >= 0.2   && < 0.3,
-    vector                    >= 0.10  && < 0.11,
-    network                   >= 2.4   && < 2.5,
-    http-streams              >= 0.4,
-    dom-selector              >= 0.1   && < 0.2,
-    blaze-builder             >= 0.3.1 && < 0.4,
-    io-streams                >= 1.0.1 && < 1.1,
-    html-conduit              >= 1.1   && < 1.2,
-    xml-conduit               >= 1.1.0.3 && < 1.2,
-    HsOpenSSL                 >= 0.10.3.3 && < 0.11,
+    base,
+    bytestring,
+    MonadCatchIO-transformers,
+    mtl,
+    aeson,
+    rex,
+    codec-mbox,
+    text,
+    time,
+    parsec,
+    containers,
+    MissingH,
+    process,
+    directory,
+    ghc-prim,
+    attoparsec,
+    old-locale,
+    text-icu,
+    base64-bytestring,
+    HDBC,
+    HDBC-sqlite3,
+    unordered-containers,
+    vector,
+    network,
+    http-streams,
+    dom-selector,
+    blaze-builder,
+    io-streams,
+    html-conduit,
+    xml-conduit,
+    HsOpenSSL,
     hspec,
     HUnit,
     template-haskell,
