beginning of work on description of settings of event providers so JS can build a GUI

--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -44,7 +44,8 @@ Library
     html-conduit,
     xml-conduit,
     HsOpenSSL,
-    transformers
+    transformers,
+    template-haskell
   exposed-modules:
     EventProviders,
     Event,
