we're not compatible with dom-selector 0.2 for now

--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -38,7 +38,7 @@ Library
     HDBC-sqlite3,
     network,
     http-streams,
-    dom-selector,
+    dom-selector >= 0.1.0 && < 0.2.0,
     blaze-builder,
     io-streams,
     html-conduit,
@@ -119,7 +119,7 @@ test-suite        tests
     vector,
     network,
     http-streams,
-    dom-selector,
+    dom-selector >= 0.1.0 && < 0.2.0,
     blaze-builder,
     io-streams,
     html-conduit,
