--- a/timesheet.cabal
+++ b/timesheet.cabal
@@ -46,12 +46,14 @@ Library
     HsOpenSSL,
     transformers,
     template-haskell,
-    th-lift
+    th-lift,
+    unordered-containers
   exposed-modules:
     EventProviders,
     Event,
     EventProvider,
-    Util
+    Util,
+    FayAeson
   other-modules:
     Redmine,
     Git,
