start the browser at the same time as the app, on linux

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -73,6 +73,7 @@ Executable cigale-timesheet
   Build-depends:
      base,
      cigale-timesheet,
+     process,
      directory,
      text,
      bytestring,
