--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -37,7 +37,7 @@ Library
     HDBC-sqlite3,
     network,
     http-streams,
-    dom-selector >= 0.1.0 && < 0.2.0,
+    dom-selector >= 0.2.0.1,
     blaze-builder,
     io-streams,
     html-conduit,
@@ -124,7 +124,7 @@ test-suite        tests
     vector,
     network,
     http-streams,
-    dom-selector >= 0.1.0 && < 0.2.0,
+    dom-selector >= 0.2.0.1,
     blaze-builder,
     io-streams,
     html-conduit,
