--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -85,7 +85,8 @@ Executable cigale-timesheet
      transformers,
      snap-core,
      snap-server,
-     blaze-html
+     blaze-html,
+     rex
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
