require directory >=1.2. on ghc7.4 i used to get 1.1 now on ghc 7.6 i get 1.2

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -27,7 +27,7 @@ Library
     containers,
     MissingH,
     process,
-    directory,
+    directory >= 1.2.0.0,
     async,
     ghc-prim,
     attoparsec,
