--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -1,12 +1,14 @@
 Name:                cigale-timesheet
 Version:             0.1
-Synopsis:            Project Synopsis Here
-Description:         Project Description Here
+Synopsis:            Timesheet helper
+Description:         Reverse-engineer your timesheet from records of your past
+                     activity left in your computer.
 License:             MIT
+License-file:        LICENSE.txt
 Author:              Emmanuel Touzery
 Maintainer:          etouzery@gmail.com
 Stability:           Experimental
-Category:            Web
+Category:            Tools
 Build-type:          Custom
 Cabal-version:       >=1.8
 
