--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -88,7 +88,8 @@ Executable cigale-timesheet
      snap-core,
      snap-server,
      blaze-html,
-     rex
+     rex,
+     HTTP
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
