--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -89,7 +89,8 @@ Executable cigale-timesheet
      snap-server,
      blaze-html,
      rex,
-     HTTP
+     HTTP,
+     filepath
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
