--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -98,7 +98,9 @@ Executable cigale-timesheet
      HTTP,
      filepath,
      parsec,
-     errors
+     errors,
+     either,
+     mtl
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
