--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -46,7 +46,8 @@ Library
     io-streams,
     html-conduit,
     xml-conduit,
-    HsOpenSSL,
+    -- openssl-streams => HsOpenSSL>=0.10.3 && <0.11)
+    HsOpenSSL < 0.11,
     transformers,
     template-haskell,
     th-lift,
@@ -147,7 +148,8 @@ test-suite        tests
     io-streams,
     html-conduit,
     xml-conduit,
-    HsOpenSSL,
+    -- openssl-streams => HsOpenSSL>=0.10.3 && <0.11)
+    HsOpenSSL < 0.11,
     hspec,
     HUnit,
     template-haskell,
