ability for the event providers to report errors. Currently the GUI still throws them away though. I'll display them soon

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -102,7 +102,8 @@ Executable cigale-timesheet
      parsec,
      errors,
      either,
-     mtl
+     mtl,
+     MissingH
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
