--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -98,7 +98,8 @@ Executable cigale-timesheet
      errors,
      either,
      mtl,
-     MissingH
+     MissingH,
+     SafeSemaphore
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -funbox-strict-fields -O2
