work on integration with a JS datepicker. https://gist.github.com/ali-abrar/fa2adbbb7ee64a0295cb was an inspiration

--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -20,8 +20,10 @@ Executable cigale-web
        reflex,
        reflex-dom,
        ghcjs-dom == 0.1.*,
+       ghcjs-base,
        time,
        text,
        aeson,
        transformers
+   js-sources: ../../lib/Pikaday-1.4.0/pikaday.js
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
