--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -24,6 +24,7 @@ Executable cigale-web
        time,
        text,
        aeson,
-       transformers
+       transformers,
+       dependent-sum
    js-sources: ../../lib/Pikaday-1.4.0/pikaday.js
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
