- bring in bootstrap 4.0 alpha - use it for some theming - the datepicker is ever closer to behaving properly

--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -25,6 +25,10 @@ Executable cigale-web
        text,
        aeson,
        transformers,
+       containers,
        dependent-sum
-   js-sources: ../../lib/Pikaday-1.4.0/pikaday.js
+   js-sources:
+        ../../lib/Pikaday-1.4.0/pikaday.js
+        ../../lib/jquery.min.js
+        ../../lib/bootstrap.min.js
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
