after lots of effort, dialogs to (for now) view config settings -- saving still TODO

--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -26,6 +26,7 @@ Executable cigale-web
        aeson,
        transformers,
        containers,
+       unordered-containers,
        dependent-sum,
        bytestring,
        errors
