remove bunch of fay legacy code,

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -59,8 +59,7 @@ Library
     EventProviders,
     Event,
     EventProvider,
-    Util,
-    FayAeson
+    Util
   other-modules:
     Redmine,
     Git,
