https://github.com/commercialhaskell/stack/issues/1712 forced me to do more things in shell scripts than I'd like but, it's not that bad in the end.

--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -4,7 +4,7 @@ Synopsis:            Timesheet helper
 Description:         Reverse-engineer your timesheet from records of your past
                      activity left in your computer.
 License:             MIT
-License-file:        LICENSE.txt
+License-file:        ../../LICENSE.txt
 Author:              Emmanuel Touzery
 Maintainer:          etouzery@gmail.com
 Stability:           Experimental
