--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -38,6 +38,6 @@ Executable cigale-web
        th-lift
    js-sources:
         ../../lib/node_modules/pikaday/pikaday.js
-        ../../lib/jquery.min.js
-        ../../lib/bootstrap.min.js
+        ../../lib/node_modules/jquery/dist/jquery.min.js
+        ../../lib/node_modules/bootstrap/dist/js/bootstrap.min.js
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
