--- a/src/WebGui/stack.yaml
+++ b/src/WebGui/stack.yaml
@@ -7,6 +7,10 @@ packages:
     git: https://github.com/ryantrinkle/reflex.git
     commit: 784f9f79396ae713a03fc4d81f8a67b75d6ade1c # need a few package bumps not present in hackage release yet
   extra-dep: true
+- location:
+    git: https://github.com/sebastiaanvisser/clay.git
+    commit: e8d5b886d86dcdf619124976f47d2b31f48970bf
+  extra-dep: true
 
 resolver: lts-3.10
 
