don't need --force-dirty anymore for the client build. it was due to missing other-modules, see https://github.com/commercialhaskell/stack/issues/1797 also add other-modules to the server project.

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -76,6 +76,12 @@ Executable cigale-timesheet
   hs-source-dirs:
     src/WebServer
   main-is: Main.hs
+  other-modules:
+     Config
+     FilePickerServer
+     Paths_cigale_timesheet
+     SnapUtil
+     Timesheet
   Build-depends:
      base,
      cigale-timesheet,
