work to port towards ghcjs-0.2/reflex-0.4. currently does not compile

--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -26,7 +26,7 @@ Executable cigale-web
        base,
        reflex,
        reflex-dom,
-       ghcjs-dom == 0.1.*,
+       ghcjs-dom,
        ghcjs-base,
        time,
        text,
