--- a/src/WebGui/stack.yaml
+++ b/src/WebGui/stack.yaml
@@ -2,22 +2,27 @@ flags: {}
 
 packages:
 - .
-- reflex-dom/ # package is fetched from github and patched bifunctors bounds for Stackage snapshot compatibility
-- location:
-    git: https://github.com/ryantrinkle/reflex.git
-    commit: 784f9f79396ae713a03fc4d81f8a67b75d6ade1c # need a few package bumps not present in hackage release yet
-  extra-dep: true
 - location:
     git: https://github.com/sebastiaanvisser/clay.git
     commit: e8d5b886d86dcdf619124976f47d2b31f48970bf
   extra-dep: true
+- location:
+    git: https://github.com/reflex-frp/reflex.git
+    commit: 77b2a505bcd5aba0b55b7ed09107dc779a3aced6
+  extra-dep: true
 
-resolver: lts-3.10
+resolver: lts-5.3
 
-compiler: ghcjs-0.1.0.20150924_ghc-7.10.2
+compiler: ghcjs-0.2.0.20151230.3_ghc-7.10.2
 compiler-check: match-exact
+setup-info:
+ ghcjs:
+  source:
+   ghcjs-0.2.0.20151230.3_ghc-7.10.2:
+    url: "https://github.com/nrolland/ghcjs/releases/download/v.0.2.0.20151230.3/ghcjs-0.2.0.20151230.3.tar.gz"
 
 extra-deps:
   - ref-tf-0.4
-  - these-0.6.1.0
-  - ghcjs-dom-0.1.1.3 # last old-base (aka ghcjs-0.1) support
+  - these-0.6.2.1
+  - ghcjs-dom-0.2.3.1
+  - reflex-dom-0.3
