--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -41,7 +41,8 @@ Executable cigale-web
        -- not really a fan of the next two, not really needed on the client.
        template-haskell,
        th-lift,
-       clay
+       clay,
+       mtl
    js-sources:
         ../../lib/node_modules/pikaday/pikaday.js
         ../../lib/node_modules/jquery/dist/jquery.min.js
