--- a/src/WebGui/stack.yaml
+++ b/src/WebGui/stack.yaml
@@ -13,13 +13,14 @@ packages:
 
 resolver: lts-5.3
 
-compiler: ghcjs-0.2.0.20151230.3_ghc-7.10.2
+compiler: ghcjs-0.2.0.20160414_ghc-7.10.3
 compiler-check: match-exact
 setup-info:
  ghcjs:
   source:
-   ghcjs-0.2.0.20151230.3_ghc-7.10.2:
-    url: "https://github.com/nrolland/ghcjs/releases/download/v.0.2.0.20151230.3/ghcjs-0.2.0.20151230.3.tar.gz"
+   ghcjs-0.2.0.20160414_ghc-7.10.3:
+     url: https://s3.amazonaws.com/ghcjs/ghcjs-0.2.0.20160414_ghc-7.10.3.tar.gz
+     sha1: 6d6f307503be9e94e0c96ef1308c7cf224d06be3
 
 extra-deps:
   - ref-tf-0.4
