event providers: generate the data type from the spec rather than the spec from the data types: will allow more powerful data types, with more meta-data.

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -71,7 +71,8 @@ Library
     Hg,
     Email,
     Skype,
-    Ical
+    Ical,
+    EventProviderSettings
 
 Executable cigale-timesheet
   hs-source-dirs:
@@ -122,7 +123,6 @@ test-suite        tests
     Email
     EmailSpec
     EventProvider
-    EventProviderSpec
     EventProviderTestsData
     Git
     GitSpec
