settings: support for combos with dynamic contents and use for skype username.

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -57,7 +57,8 @@ Library
     zip-archive >= 0.1.4,
     errors >= 2.0.0,
     http-types,
-    th-printf
+    th-printf,
+    filepath
   exposed-modules:
     EventProviders,
     TsEvent,
