don't like that I'm again standardizing on Value instead of the precise types but that's what it is for now.

--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -43,7 +43,8 @@ Executable cigale-web
        th-lift,
        clay,
        mtl,
-       string-conversions
+       string-conversions,
+       vector
    js-sources:
         ../../lib/node_modules/pikaday/pikaday.js
         ../../lib/node_modules/jquery/dist/jquery.min.js
