--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -44,7 +44,10 @@ Executable cigale-web
        clay,
        mtl,
        string-conversions,
-       vector
+       vector,
+       monad-control,
+       lens,
+       semigroups
    js-sources:
         ../../lib/node_modules/pikaday/pikaday.js
         ../../lib/node_modules/jquery/dist/jquery.min.js
