--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-6.1
+resolver: lts-7.19
 
 # Local packages, usually specified by relative directory name
 packages:
@@ -12,6 +12,7 @@ extra-deps:
 - codec-mbox-0.2.0.0
 - dom-selector-0.2.0.1
 - th-printf-0.3.1
+- HDBC-sqlite3-2.3.3.1
 
 
 # Override default flag values for local packages and extra-deps
