--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,15 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-7.19
+resolver: lts-8.20
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- location:
+    git: https://github.com/jpvillaisaza/slack-web
+    commit: 2e354a03e59772ded9504df69b9478f0d8ace1f5
+  extra-dep: true
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
@@ -13,6 +17,7 @@ extra-deps:
 - dom-selector-0.2.0.1
 - th-printf-0.3.1
 - HDBC-sqlite3-2.3.3.1
+- slack-web-0.1.0
 
 
 # Override default flag values for local packages and extra-deps
