migrate to newer slack-web. loop to fetch from all slack groups.

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -57,6 +57,7 @@ Library
     th-printf,
     filepath,
     string-conversions,
+    servant-client,
     slack-web
   exposed-modules:
     EventProviders,
