--- a/src/WebGui/web-gui.cabal
+++ b/src/WebGui/web-gui.cabal
@@ -52,5 +52,6 @@ Executable cigale-web
    js-sources:
         ../../lib/node_modules/pikaday/pikaday.js
         ../../lib/node_modules/jquery/dist/jquery.min.js
-        ../../lib/node_modules/bootstrap/dist/js/bootstrap.min.js
+        ../../lib/node_modules/popper.js/dist/umd/popper.min.js
+        ../../lib/twbs-bootstrap-082c9d9/dist/js/bootstrap.min.js
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
