upgrade slack-web

--- a/stack.yaml
+++ b/stack.yaml
@@ -13,7 +13,10 @@ extra-deps:
 - dom-selector-0.2.0.1
 - th-printf-0.3.1
 - HDBC-sqlite3-2.3.3.1
-- slack-web-0.2.0.1
+- slack-web-0.2.0.2
+- servant-client-core-0.12
+- servant-client-0.12
+- servant-0.12
 
 
 # Override default flag values for local packages and extra-deps
