increase the slack API timeout from 5s to 30s, fixing the timeouts I've been having recently

--- a/cigale-timesheet.cabal
+++ b/cigale-timesheet.cabal
@@ -66,6 +66,8 @@ Library
     string-conversions,
     servant-client,
     slack-web,
+    http-client,
+    http-client-tls,
     mmorph
   exposed-modules:
     EventProviders,
